--- a/models/docker_models.config
+++ b/models/docker_models.config
@@ -1,12 +1,12 @@
 model_config_list {
   config {
     name: 'initial_inference'
-    base_path: '%DIRECTORY%/initial_inference'
+    base_path: '/models/initial_inference'
     model_platform: "tensorflow"
   }
   config {
     name: 'recurrent_inference'
-    base_path: '%DIRECTORY%/recurrent_inference'
+    base_path: '/models/recurrent_inference'
     model_platform: "tensorflow"
   }
 }
